--- a/src/Medium.Tests/Medium.Tests.csproj
+++ b/src/Medium.Tests/Medium.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8AAD0749-F402-406E-978E-E2B2D93B2A33}</ProjectGuid>
+    <ProjectGuid>{61CE31F9-E26D-42BE-BECD-183B208F28EB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mediator.Tests</RootNamespace>
-    <AssemblyName>Mediator.Tests</AssemblyName>
+    <RootNamespace>Medium.Tests</RootNamespace>
+    <AssemblyName>Medium.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
