--- a/src/Medium.Tests/packages.config
+++ b/src/Medium.Tests/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentAssertions" version="3.2.1" targetFramework="net45" />
+  <package id="structuremap" version="3.1.2.138" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
 </packages>
