--- a/src/Medium/Medium.csproj
+++ b/src/Medium/Medium.csproj
@@ -41,6 +41,12 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IEvent.cs" />
+    <Compile Include="IEventHandler.cs" />
+    <Compile Include="IMediator.cs" />
+    <Compile Include="IRequest.cs" />
+    <Compile Include="IRequestHandler.cs" />
+    <Compile Include="Mediator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
