Added some perf tests

--- a/src/Medium.Tests/Medium.Tests.csproj
+++ b/src/Medium.Tests/Medium.Tests.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MediatorTests.cs" />
+    <Compile Include="NonDynamicMediatorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
