--- a/src/Medium.Application/Medium.Application.csproj
+++ b/src/Medium.Application/Medium.Application.csproj
@@ -46,11 +46,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\DomainEventDispatcherHandler.cs" />
     <Compile Include="TodoItems\CreateTodoItem.cs" />
     <Compile Include="Infrastructure\IManageUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Infrastructure\RavenDbUnitOfWork.cs" />
     <Compile Include="Infrastructure\UnitOfWorkRequestHandler.cs" />
+    <Compile Include="TodoItems\TodoItemCreatedEventHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Medium.Domain\Medium.Domain.csproj">
