Changed example domain modle. Testing stuff

--- a/src/Mediocr.Example/packages.config
+++ b/src/Mediocr.Example/packages.config
@@ -3,6 +3,6 @@
   <package id="Nancy" version="0.23.2" targetFramework="net45" />
   <package id="Nancy.Bootstrappers.StructureMap" version="0.23.2" targetFramework="net45" />
   <package id="Nancy.Hosting.Aspnet" version="0.23.2" targetFramework="net45" />
-  <package id="RavenDB.Client" version="3.0.3507-Unstable" targetFramework="net45" />
+  <package id="RavenDB.Client" version="3.0.3528" targetFramework="net45" />
   <package id="structuremap" version="3.0.1.114" targetFramework="net45" />
 </packages>
