--- a/src/Mediocr.Domain/Mediocr.Domain.csproj
+++ b/src/Mediocr.Domain/Mediocr.Domain.csproj
@@ -42,9 +42,15 @@
   <ItemGroup>
     <Compile Include="Entity.cs" />
     <Compile Include="IEntity.cs" />
+    <Compile Include="IEntityRepository.cs" />
     <Compile Include="IEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TodoItem.cs" />
+    <Compile Include="TodoItems\ITodoItemRepository.cs" />
+    <Compile Include="TodoItems\Task.cs" />
+    <Compile Include="TodoItems\TodoItem.cs" />
+    <Compile Include="TodoItems\TodoItemCompleted.cs" />
+    <Compile Include="TodoItems\TodoItemCreated.cs" />
+    <Compile Include="TodoItems\TodoItemState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
