--- a/src/Mediocr.Application.Tests/Mediocr.Application.Tests.csproj
+++ b/src/Mediocr.Application.Tests/Mediocr.Application.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{45DCBCD4-4034-449A-953F-DA81B504A264}</ProjectGuid>
+    <ProjectGuid>{A2D4602E-A062-473C-AD45-4BC0314AC561}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mediocr.Application</RootNamespace>
-    <AssemblyName>Mediocr.Application</AssemblyName>
+    <RootNamespace>Mediocr.Application.Tests</RootNamespace>
+    <AssemblyName>Mediocr.Application.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -38,27 +38,10 @@
     <Reference Include="AutoMapper.Net4">
       <HintPath>..\packages\AutoMapper.3.3.0\lib\net40\AutoMapper.Net4.dll</HintPath>
     </Reference>
-    <Reference Include="Mediocr.Application, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Mediocr.Example\Bin\Mediocr.Application.dll</HintPath>
-    </Reference>
-    <Reference Include="Raven.Abstractions, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\RavenDB.Client.3.0.3528\lib\net45\Raven.Abstractions.dll</HintPath>
-    </Reference>
-    <Reference Include="Raven.Client.Lightweight, Version=3.0.0.0, Culture=neutral, PublicKeyToken=37f41c7f99471593, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\RavenDB.Client.3.0.3528\lib\net45\Raven.Client.Lightweight.dll</HintPath>
-    </Reference>
-    <Reference Include="StructureMap, Version=3.1.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\structuremap.3.1.4.143\lib\net40\StructureMap.dll</HintPath>
-    </Reference>
-    <Reference Include="StructureMap.Net4">
-      <HintPath>..\packages\structuremap.3.1.4.143\lib\net40\StructureMap.Net4.dll</HintPath>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -67,37 +50,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationBootstrapper.cs" />
-    <Compile Include="Infrastructure\DomainEntityMapper.cs" />
-    <Compile Include="TodoItems\CreateTodoItem.cs" />
-    <Compile Include="Infrastructure\IManageUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Infrastructure\RavenDbUnitOfWork.cs" />
-    <Compile Include="Infrastructure\UnitOfWorkRequestHandler.cs" />
-    <Compile Include="TodoItems\CreateTodoItemHandler.cs" />
-    <Compile Include="TodoItems\GetTodoItemById.cs" />
-    <Compile Include="TodoItems\GetTodoItemByIdHandler.cs" />
-    <Compile Include="TodoItems\GetTodoItems.cs" />
-    <Compile Include="TodoItems\GetTodoItemsHandler.cs" />
-    <Compile Include="Infrastructure\EntityRepository.cs" />
-    <Compile Include="TodoItems\MarkTodItemCompletedHandler.cs" />
-    <Compile Include="TodoItems\MarkTodoItemCompleted.cs" />
-    <Compile Include="TodoItems\PersistEvents.cs" />
-    <Compile Include="TodoItems\TodoItemRepository.cs" />
-    <Compile Include="TodoItems\TodoItemViewModel.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Mediocr.Domain\Mediocr.Domain.csproj">
-      <Project>{b70fa709-54de-430d-9e99-240361b7e1ac}</Project>
-      <Name>Mediocr.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mediocr\Mediocr.csproj">
-      <Project>{61b5180b-1d73-4658-bf6a-3662f2a0619d}</Project>
-      <Name>Mediocr</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Mediocr.Application\Mediocr.Application.csproj">
+      <Project>{45DCBCD4-4034-449A-953F-DA81B504A264}</Project>
+      <Name>Mediocr.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mediocr.Domain\Mediocr.Domain.csproj">
+      <Project>{B70FA709-54DE-430D-9E99-240361B7E1AC}</Project>
+      <Name>Mediocr.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
