--- a/src/Mediocr.Application/packages.config
+++ b/src/Mediocr.Application/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.3.0" targetFramework="net45" />
   <package id="RavenDB.Client" version="3.0.3528" targetFramework="net45" />
   <package id="structuremap" version="3.1.4.143" targetFramework="net45" />
 </packages>
